RnBeads 1.3.2
=============

 * Performance and memory improvements during loading, qc and preprocessing of large bisulfite-derived RnBSets
 * added optional arguments to meth() and covg() allowing for partial retrieval of methylation and coverage information from RnBSets. Particularly makes sense for large, disk-based datasets.

RnBeads 1.3.1
=============

 * Added "remove.regions" function for RnBSet class
 * summarize.regions now summarizes for each sample individually in order to reduce memory consumption for large WGBS datasets
 * import.skip.object.check option for keeping the memory profile low while loading huge datasets
 * NA sites (filtering.missing.value.quantile) are now removed even if they were previously masked (filtering.low.coverage.masking)
 * Added "nsites" method for quickly extracting the number of sites for large RnBSet objects without having to retrieve the full methylation matrix
 * Added "hasCovg" method for quickly determining whether coverage information is present in large RnBSet objects without having to retrieve the full coverage matrix

RnBeads 1.1.9
=============

 * Filtering report fix when no normalization is conducted
 * Bugfixes for combine(RnBSet, RnBSet) and BigFf matrices

RnBeads 1.1.8
=============

 * Corrected coverage statistics in sample summary table: Sites with NA methylation values are no longer considered in the coverage statistics (makes a difference if some coverage threshold is applied)
 * Improved method for gender prediction. Predicted genders are also included in the exported annotation table

RnBeads 1.1.7
=============

 * Improvements to mergeSamples function for RnBiseqSets
 * Some more memory clean-up

RnBeads 1.1.6
=============

 * Differential methylation based on region level only is now supported
 * Minor updates to the differential methylation report generation
 * Performance improvements and minor bugfixes for using disk.dump.bigff
 * Performance improvements (more memory clean-up)


RnBeads 1.1.5