@@ -896,6 +896,58 @@ rnb.get.reliability.matrix <- function(rnb.set, row.names = FALSE) {
 	result
 }
 
+#' rnb.has.reliability.info
+#' 
+#' Does the object contain info on reliability
+#' 
+#' @param rnb.set   Methylation dataset as an object of type inheriting \code{\linkS4class{RnBSet}}.
+#' @return \code{logical} indicating whether the object contains reliability information
+#' 
+#' @author Fabian Mueller
+#' @noRd
+rnb.has.reliability.info <- function(rnb.set) {
+	if (!inherits(rnb.set, "RnBSet")) {
+		stop("invalid value for rnb.set")
+	}
+	if (inherits(rnb.set, "RnBeadSet")) {
+		return(!is.null(dpval(rnb.set)))
+	} else { # inherits(rnb.set, "RnBiseqSet")
+		return(hasCovg(rnb.set))
+	}
+}
+
+#' rnb.get.reliability.counts.per.sample
+#' 
+#' Gets a vector with the counts of reliable measurements per sample
+#' 
+#' @param rnb.set   Methylation dataset as an object of type inheriting \code{\linkS4class{RnBSet}}.
+#' @param siteIndices	vector of indices of sites that should be considered. indices can be numeric or logical.
+#' @return \code{numric} vector in which each entry corresponds to the number of reliable measurements in the corresponding sample
+#'         If the dataset does not contain coverage or detection p-value information, the returned value is \code{NULL}.
+#' 
+#' @author Fabian Mueller
+#' @noRd
+rnb.get.reliability.counts.per.sample <- function(rnb.set, siteIndices=NULL) {
+	if (!inherits(rnb.set, "RnBSet")) {
+		stop("invalid value for rnb.set")
+	}
+	if (inherits(rnb.set, "RnBeadSet")) {
+		relmat <- dpval(rnb.set)
+		if (!is.null(result)) {
+			result <- colSums(relmat < rnb.getOption("filtering.greedycut.pvalue.threshold"), na.rm=TRUE)
+		}
+	} else { # inherits(rnb.set, "RnBiseqSet")
+		result <- NULL
+		if (hasCovg(rnb.set)) {
+			result <- sapply(1:length(samples(rnb.set)), FUN=function(j){
+				sum(as.vector(covg(rnb.set, i=siteIndices, j=j)) >= rnb.getOption("filtering.coverage.threshold"), na.rm=TRUE)
+			})
+			names(result) <- samples(rnb.set)
+		}
+	}
+	result
+}
+
 ########################################################################################################################
 
 ## methylumi.intensities.by.color
