@@ -105,5 +105,6 @@ logging.exit.on.error	logical	no	no		FALSE
 distribution.subsample	integer	no	no	[0,	1000000
 disk.dump.big.matrices	logical	no	no		TRUE
 disk.dump.bigff	logical	no	no		FALSE
+disk.dump.bigff.finalizer	character	no	no	(delete,close)	delete
 enforce.memory.management	logical	no	no		FALSE
 enforce.destroy.disk.dumps	logical	no	no		FALSE
